@@ -2,6 +2,11 @@
   ChangeLog for SPINspiral code repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   229: sluys, 21/12/2009
+     - Changed some screen output
+     - Allow injRanSeed==0: produces a warning and draws different injection values 
+       for each chain (use with care!)
+   
    225: sluys, 22/10/2009
      - Fixed small bug in SPINspiral_mcmc.c - can now run without correlated updates
    
